<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.degus.accesspedia.activity.main.ContextMenuMainActivity">

    <item
        android:id="@+id/action_mute"
        android:title="@string/mute"
        android:icon="@drawable/ic_unmuted" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about_menu_item" />

    <item android:title="@string/language">
        <menu>
            <item
                android:id="@+id/lang_pl"
                android:title="@string/polish"
                android:icon="@mipmap/ic_pl_flag" />
            <item
                android:id="@+id/lang_en"
                android:title="@string/english"
                android:icon="@mipmap/ic_en_flag" />
            <item
                android:id="@+id/lang_it"
                android:title="@string/italiano"
                android:icon="@mipmap/ic_it_flag" />
        </menu>
    </item>

</menu>